proptypes and z-index fix

--- a/simple-tehilim/src/css/Reader.css
+++ b/simple-tehilim/src/css/Reader.css
@@ -134,7 +134,7 @@
     font-size: 33px;
     padding-bottom: 20px;
     border: black solid 1px;
-    z-index: 1;
+    z-index: 2;
 }
 
 #menuButton:hover {
@@ -152,6 +152,7 @@
     background-color: navy;
     transition: width .25s ease-in-out;
     width: 0;
+    z-index: 1;
 }
 
 .slideOpen {
